# llm-factor-recsys-hnm

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
configs/: config.yaml
configs/baseline/: als.yaml  bpr.yaml  popularity.yaml
configs/embedding/: default.yaml
configs/evaluation/: default.yaml
configs/extract/: default.yaml
configs/features/: default.yaml
configs/filter/: active5.yaml
configs/kar/: default.yaml
configs/model/: dcnv2.yaml  deepfm.yaml  din.yaml  lightgcn.yaml  reranker.yaml  sasrec.yaml
configs/reasoning/: default.yaml
configs/segmentation/: default.yaml
configs/split/: temporal.yaml
configs/sweep/: deepfm.yaml
configs/train/: default.yaml
docs/: cold_start_analysis.md  config_design.md  evaluation_methodology.md  model_architecture.md  prompt_design.md  scripts_tutorial.md  tuning_history.md
docs/mlops_design/: hm_mlops_design.md
docs/research_design/: contribution_notes.md  hm_unified_project_design.md
notebooks/: 00_eda.ipynb  01_factual_eval.ipynb  02_reasoning_eval.ipynb  02a_reasoning_quality_report.ipynb  03_knowledge_case_study.ipynb  04_segmentation_analysis.ipynb  05a_knowledge_purchase_analysis.ipynb  05b_knowledge_sparsity_analysis.ipynb
notebooks/builders/: build_01_factual_eval.py  build_02_reasoning_eval.py  build_03_knowledge_case_study.py  build_04_segmentation_analysis.py
results/analysis/: cka_matrix.csv  cold_start_results.csv  conditional_mi.json  diversity_results.csv  mi_results.csv  purchase_coherence.csv  separation_auc.csv
results/metrics/: bprmf_val.json  popularity_global_val.json  popularity_recent_val.json  userknn_val.json
results/reranker/: reranker_base_metrics.json  reranker_base_val.json
scripts/: analyze_knowledge.py  build_features.py  eval_factual.py  eval_reasoning.py  evaluate.py  extract_factual_knowledge.py  extract_reasoning_knowledge.py  preprocess.py  prestore.py  segment.py  train.py  train_reranker.py
src/: config.py  embeddings.py  losses.py
src/analysis/: __init__.py  ablation_embeddings.py  cold_start.py  layer_information.py  mutual_information.py  preference_diversity.py
src/baselines/: bprmf.py  popularity.py  userknn.py  utils.py
src/eval_prompt/: __init__.py  factual.py  judge.py  reasoning.py  report.py  structural.py
src/evaluation/: metrics.py
src/features/: __init__.py  candidate_generation.py  engineering.py  reranker_features.py  sequences.py  store.py
src/kar/: __init__.py  embedding_index.py  expert.py  fusion.py  gating.py  hybrid.py
(+86 files in other folders)
